--- a/templates/mushrooms.html
+++ b/templates/mushrooms.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Is it working?</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    I'm part of the mushrooms page
     {% for mushroom in mushrooms %}
         {{ mushrooms.name }}<br>
         {{ mushrooms.description }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
