--- a/templates/mushrooms.html
+++ b/templates/mushrooms.html
@@ -2,9 +2,9 @@
 {% block content %}
 
     I'm part of the mushrooms page
-    {% for mushroom in mushrooms %}
-        {{ mushrooms.name }}<br>
-        {{ mushrooms.description }}<br>
+    {% for i in list %}
+        {{ i.name }}<br>
+        {{ i.description }}<br>
     {% endfor %}
 
 {% endblock %}
