--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,8 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix light-blue-text text-darken-4">account_circle</i>
-                        <input id="username" name="username" type="text" class="validate">
+                        <input id="username" name="username" type="text" minlength="5"
+                        maxlength="15" pattern="^[a-zA-Z0-9]{5,18}$" class="validate" required>
                         <label for="username">Username</label>
                     </div>
                 </div>
@@ -17,14 +18,15 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix light-blue-text text-darken-4">lock</i>
-                        <input id="password" name="password" type="password" class="validate">
+                        <input id="password" name="password" type="password" minlength="5"
+                        maxlength="15" pattern="^[a-zA-Z0-9]{8,18}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s4 offset-m4 btn-large light-blue darken-4 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                    <button type="submit" class="col s4 offset-m4 btn-large light-blue darken-4">
+                        Register <i class="material-icons">login</i>
                     </button>
                 </div>
             </div>
