User profile added

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="#">Foraging Map</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 </ul>
             </div>
         </nav>
@@ -35,7 +36,8 @@
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="#">Foraging Map</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         </ul>
     </header>
 
