--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3 class="center-align">Register</h3>
+    <h3 class="center-align">Login</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="material-icons prefix light-blue-text text-darken-4">person_add</i>
+                        <i class="material-icons prefix light-blue-text text-darken-4">manage_accounts</i>
                         <input id="username" name="username" type="text" minlength="5"
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,18}$" class="validate" required>
                         <label for="username">Username</label>
@@ -23,10 +23,10 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                <!-- register -->
+                <!-- login -->
                 <div class="row">
                     <button type="submit" class="col s4 offset-m4 btn-large light-blue darken-4">
-                        Register <i class="material-icons">login</i>
+                        Login <i class="material-icons">login</i>
                     </button>
                 </div>
             </div>
@@ -36,8 +36,8 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already Registered?
-                <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
+                New Here?
+                <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register Account</a>
             </p>
         </div>
     </div>
