User page created to manage db entries

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Mushroom Foraging Wales</a>
+                <a href="#!" class="brand-logo">Mushroom Hunting Wales</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
