--- a/templates/manage.html
+++ b/templates/manage.html
@@ -2,21 +2,44 @@
 {% block content %}
 
     <h2>Add Mushroom</h2>
-    <div class="row">
+    <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="">
-          <div class="row">
-            <div class="input-field col s12">
-              <i class="material-icons prefix">travel_explore</i>
-              <input id="icon_prefix" type="text" class="validate">
-              <label for="icon_prefix">Mushroom Name</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">travel_explore</i>
+                    <input id="name" name="name" type="text" class="validate" required>
+                    <label for="name">Mushroom Name</label>
+                </div>
             </div>
-            <div class="input-field col s12">
-              <i class="material-icons prefix">notes</i>
-              <input id="icon_telephone" type="tel" class="validate">
-              <label for="icon_telephone">Description</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">link</i>
+                    <input id="image_url" name="image_url" type="text" class="validate" required>
+                    <label for="image_url">Image URL</label>
+                </div>
             </div>
-          </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">notes</i>
+                    <textarea id="description" name="description" maxlength="400" class="materialize-textarea validate" required></textarea>
+                    <label for="description">Description</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">restaurant</i>
+                    <input id="edible" name="edible" type="text" class="validate" required>
+                    <label for="edible">Edible?</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">date_range</i>
+                    <input id="fruiting" name="fruiting" type="text" class="validate" required>
+                    <label for="fruiting">Fruiting Season</label>
+                </div>
+            </div>
         </form>
-      </div>
+    </div>
 
 {% endblock %}
