--- a/templates/map.html
+++ b/templates/map.html
@@ -6,10 +6,15 @@
         <li>
             <div class="collapsible-header">
                 <i class="material-icons">arrow_drop_down</i>
-                {{ mushroom.name }}
+                <p>{{ mushroom.name }}</p>
+                <p><img src='{{ mushroom.image_url }}'></p>
             </div>
             <div class="collapsible-body">
-                <span>{{ mushroom.description }}</span>
+                <p>Description: {{ mushroom.description }}</p>
+                <p>Is it edible? {{ mushroom.edible }}</p>
+                <p>Fruiting season: {{ mushroom.fruiting }}</p>
+                <p></p>
+                <p><em>Created by: {{ mushroom.created_by }}</em></p>
             </div>
         </li>
         {% endfor %}
