--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
 body {
     background-color: white;
+    font-family: 'Questrial', sans-serif;
 }
 
 .flashes h4 {
     line-height: 2;
+}
+
+.logo-image {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+.logo {
+    font-family: 'Questrial', sans-serif;
+    font-weight: bold;
 }
