--- a/templates/base.html
+++ b/templates/base.html
@@ -12,27 +12,27 @@
     {% block styles %}
     {% endblock %}
 
-    <title>Mushroom Forager</title>
+    <title>Mushroom Hunter</title>
 </head>
 
 <body>
 
     <header>
         <nav>
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Mushroom Hunting Wales</a>
+            <div class="nav-wrapper brown">
+                <span><img src="static/images/mushroom.png" width="40px" height="40px" class="logo-image"></span>
+                <a href="#!" class="brand-logo logo">Mushroom Hunter</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="{{ url_for('map') }}">Mushroom Map</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('map_logged_in') }}">Mushroom Map</a></li>
-                        <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
-                        <li><a href="{{ url_for('map') }}">Foraging Map</a></li>
-                        <li><a href="{{ url_for('register') }}">Register</a></li>
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -40,15 +40,14 @@
 
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('map') }}">Mushroom Map</a></li>
             {% if session.user %}
-                <li><a href="{{ url_for('map_logged_in') }}">Mushroom Map</a></li>
-                <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
-                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
-                <li><a href="{{ url_for('map') }}">Foraging Map</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-                <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            <li><a href="{{ url_for('login') }}">Login</a></li>
             {% endif %}
         </ul>
     </header>
