--- a/templates/edit_mushroom.html
+++ b/templates/edit_mushroom.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2>Add Mushroom to Database</h2>
+<h2>Edit Entry</h2>
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="{{ url_for('add_mushroom') }}">
+    <form class="col s12" method="POST" action="{{ url_for('edit_mushroom', mushroom_id=mushroom._id) }}">
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">travel_explore</i>
-                <input id="name" name="name" type="text" class="validate" required>
+                <input id="name" name="name" type="text" value="{{ mushroom.name }}" class="validate" required>
                 <label for="name">Mushroom Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">link</i>
-                <input id="image_url" name="image_url" type="text" class="validate" required>
+                <input id="image_url" name="image_url" type="text" value="{{ mushroom.image_url }}" class="validate" required>
                 <label for="image_url">Image URL</label>
             </div>
         </div>
@@ -22,7 +22,9 @@
             <div class="input-field col s12">
                 <i class="material-icons prefix">notes</i>
                 <textarea id="description" name="description" maxlength="400" class="materialize-textarea validate"
-                    required></textarea>
+                    required>
+                    {{- mushroom.description -}}
+                </textarea>
                 <label for="description">Description</label>
             </div>
         </div>
@@ -41,15 +43,18 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">date_range</i>
-                <input id="fruiting" name="fruiting" type="text" class="validate" required>
+                <input id="fruiting" name="fruiting" type="text" value="{{ mushroom.fruiting }}" class="validate" required>
                 <label for="fruiting">Fruiting Season</label>
             </div>
         </div>
         <div class="row">
             <div class="col s12 center-align">
-                <button class="btn waves-effect waves-light" type="submit">Add Mushroom
-                    <i class="material-icons right">add</i>
+                <button class="btn waves-effect waves-light" type="submit">Edit Mushroom
+                    <i class="material-icons right">edit</i>
                 </button>
+                <a href="{{ url_for('map_logged_in') }}" class="btn red">
+                    Cancel <i class="material-icons right">cancel</i>
+                </a>
             </div>
         </div>
     </form>
