--- a/templates/map.html
+++ b/templates/map.html
@@ -1,23 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <ul class="collapsible">
-        {% for mushroom in mushrooms %}
-        <li>
-            <div class="collapsible-header">
+<ul class="collapsible">
+    {% for mushroom in mushrooms %}
+    <li>
+        <div class="collapsible-header">
+            <div class="col s9">
                 <i class="material-icons">arrow_drop_down</i>
                 <p>{{ mushroom.name }}</p>
                 <p><img src='{{ mushroom.image_url }}'></p>
             </div>
-            <div class="collapsible-body">
-                <p>Description: {{ mushroom.description }}</p>
-                <p>Is it edible? {{ mushroom.edible }}</p>
-                <p>Fruiting season: {{ mushroom.fruiting }}</p>
-                <p></p>
-                <p><em>Created by: {{ mushroom.created_by }}</em></p>
+            <div class="col s3">
+                {% if session.user %}
+                    <a href="{{ url_for('edit_mushroom', mushroom_id=mushroom._id) }}" class="waves-effect waves-light btn-small">Edit</a>
+                    <a href="" class="waves-effect waves-light btn-small red">Delete</a>
+                {% endif %}
             </div>
-        </li>
-        {% endfor %}
-    </ul>
+        </div>
+        </div>
+        <div class="collapsible-body">
+            <p>Description: {{ mushroom.description }}</p>
+            <p>Is it edible? {{ mushroom.edible }}</p>
+            <p>Fruiting season: {{ mushroom.fruiting }}</p>
+            <p></p>
+            <p><em>Created by: {{ mushroom.created_by }}</em></p>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
