Google Maps API and code added

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,10 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhT3Q5y5GrRq38uxPU2KcR4TvA3ksgx6Y&callback=initMap&v=weekly"
+        async></script>
     {% block scripts %}
     {% endblock %}
 </body>
