--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,3 +19,10 @@ body {
     font-family: 'Questrial', sans-serif;
     font-weight: bold;
 }
+
+#map {
+    height: 600px;
+    width: 100%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
