--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class="col s12">
+    <div id="map"></div>
+</div>
 <ul class="collapsible">
     {% for mushroom in mushrooms %}
     <li>
@@ -8,12 +10,12 @@
             <div class="col s9">
                 <i class="material-icons">arrow_drop_down</i>
                 <p>{{ mushroom.name }}</p>
-                <p><img src='{{ mushroom.image_url }}'></p>
+                <p><img src='{{ mushroom.image_url }}' height="75px" width="75px"></p>
             </div>
             <div class="col s3">
                 {% if session.user %}
                     <a href="{{ url_for('edit_mushroom', mushroom_id=mushroom._id) }}" class="waves-effect waves-light btn-small">Edit</a>
-                    <a href="" class="waves-effect waves-light btn-small red">Delete</a>
+                    <a href="{{ url_for('delete_mushroom', mushroom_id=mushroom._id) }}" class="waves-effect waves-light btn-small red">Delete</a>
                 {% endif %}
             </div>
         </div>
