--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Questrial&display=swap');
 
 body {
     background-color: white;
@@ -25,4 +25,35 @@ body {
     width: 100%;
     margin-top: 2rem;
     margin-bottom: 2rem;
+}
+
+.card-title {
+    background-color: black;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.mushroom-image {
+    height: 200px;
+    object-fit: cover
+}
+
+.card-edit-buttons {
+    margin-bottom: 10px;
+    margin-left: 25px;
+}
+
+.card-bold {
+    font-family: 'Poppins', sans-serif;
+}
+
+.created-by {
+    color: grey;
+    padding-left: 10px;
+    font-size: 12px;
+}
+
+.card {
+    padding: 10px;
+
 }
