--- a/templates/map copy 2.html
+++ b/templates/map copy 2.html
@@ -4,13 +4,15 @@
     <div id="map"></div>
 </div>
 
+{% for mushroom in mushrooms %}
+    {{ count+1 }}
+{% if count%3==0 %}
 <div class="row">
-    {% for mushroom in mushrooms %}
+    {% endif %}
     <div class="col s12 m6 l4">
         <div class="card">
             <div class="card-image">
-                <a href='{{ mushroom.image_url }}' target="_blank"><img src='{{ mushroom.image_url }}'
-                        class="mushroom-image"></a>
+                <a href='{{ mushroom.image_url }}' target="_blank"><img src='{{ mushroom.image_url }}' class="mushroom-image"></a>
                 <span class="card-title">{{ mushroom.name }}</span>
             </div>
             <div class="card-content">
@@ -34,7 +36,7 @@
             </div>
         </div>
     </div>
-    {% endfor %}
 </div>
+{% endfor %}
 
 {% endblock %}
