--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for location in locations %}
-        {{ location }}
-    {% endfor %}
+    {{ locationsJson }}
     <div class="col s12">
         <div id="map"></div>
     </div>
