Google Map markers successfully populating from MongoDB entries

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {{ locationsJson }}
-    <div class="col s12">
-        <div id="map"></div>
-    </div>
+    {{ locations_maps_array }}
+    
 
 {% endblock %}
