--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,15 @@
         type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }} " type="text/css">
-    <!-- Takes geo variable from map function and inserts into geo variable in Google Maps JS function -->
-    <script>
-        let locations = '{{ locationsJson }}';
-      </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhT3Q5y5GrRq38uxPU2KcR4TvA3ksgx6Y&callback">
+    </script>
+    <script type="text/javascript">
+    
+     </script>
     {% block styles %}
     {% endblock %}
 
-    <title>Mushroom Hunter</title>
+    <title>Fungi Finders</title>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
         <nav>
             <div class="nav-wrapper brown">
                 <span><img src="static/images/mushroom.png" width="40px" height="40px" class="logo-image"></span>
-                <a href="#!" class="brand-logo logo">Fungi Finder</a>
+                <a href="#!" class="brand-logo logo">Fungi Finders</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
@@ -78,10 +79,35 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhT3Q5y5GrRq38uxPU2KcR4TvA3ksgx6Y&callback=initMap&v=weekly"
-        async></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <!--Google Maps init and load markers-->
+    <script>
+        var locations = {{ locations_maps_array|safe }}
+        
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 9,
+            center: new google.maps.LatLng(51.67079564656212, -3.441466453278682),
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        });
+
+        var infowindow = new google.maps.InfoWindow();
+
+        var marker, i;
+
+        for (i = 0; i < locations.length; i++) {
+            marker = new google.maps.Marker({
+                position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+                map: map
+            });
+
+            google.maps.event.addListener(marker, 'click', (function (marker, i) {
+                return function () {
+                    infowindow.setContent(locations[i][0]);
+                    infowindow.open(map, marker);
+                }
+            })(marker, i));
+        }
+    </script>
     {% block scripts %}
     {% endblock %}
 </body>
