Markers load mushrooms via listjs library

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/913b585bc7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }} " type="text/css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhT3Q5y5GrRq38uxPU2KcR4TvA3ksgx6Y&callback">
     </script>
-    <script type="text/javascript">
-    
-     </script>
     {% block styles %}
     {% endblock %}
 
@@ -33,7 +31,6 @@
                     <li><a href="{{ url_for('map') }}">Mushroom Map</a></li>
                     {% if session.user %}
                     <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('register') }}">Register</a></li>
@@ -48,7 +45,6 @@
             <li><a href="{{ url_for('map') }}">Mushroom Map</a></li>
             {% if session.user %}
             <li><a href="{{ url_for('add_mushroom') }}">Add Entry</a></li>
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
             <li><a href="{{ url_for('register') }}">Register</a></li>
@@ -69,21 +65,27 @@
         {% endif %}
         {% endwith %}
     </section>
+    <section>
+        <!-- Welcome Logged In Message -->
+        {% if session.user %}
+        <div class="welcome">You are logged in</div>
+        {% endif %}
+    </section>
 
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <!--Google Maps init and load markers-->
     <script>
-        var locations = {{ locations_maps_array|safe }}
-        
+        var locations = {{ locations_maps_array | safe }}
+
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 9,
             center: new google.maps.LatLng(51.67079564656212, -3.441466453278682),
@@ -100,13 +102,16 @@
                 map: map
             });
 
-            google.maps.event.addListener(marker, 'click', (function (marker, i) {
-                return function () {
+            google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                return function() {
                     infowindow.setContent(locations[i][0]);
                     infowindow.open(map, marker);
-                }
-            })(marker, i));
+                    var printLocation = locations[i][0];
+                    document.getElementById('output').innerHTML = printLocation;
+                    document.getElementById("output").focus();
         }
+      })(marker, i));
+    }
     </script>
     {% block scripts %}
     {% endblock %}
