--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,13 @@ body {
     font-family: 'Questrial', sans-serif;
 }
 
+.hero-img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    opacity: 70%;
+}
+
 .flashes h4 {
     line-height: 2;
 }
@@ -20,6 +27,11 @@ body {
     font-weight: bold;
 }
 
+.about-text {
+    font-size: 20px;
+    text-align: justify;
+}
+
 #map {
     height: 600px;
     width: 100%;
@@ -27,24 +39,16 @@ body {
     margin-bottom: 2rem;
 }
 
-.card-title {
-    background-color: black;
-    padding-left: 0;
-    margin-left: 0;
-}
-
 .mushroom-image {
-    height: 200px;
-    object-fit: cover
+    height: 380px;
+    object-fit: cover;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .card-edit-buttons {
     margin-bottom: 10px;
     margin-left: 25px;
-}
-
-.card-bold {
-    font-family: 'Poppins', sans-serif;
 }
 
 .created-by {
@@ -54,6 +58,38 @@ body {
 }
 
 .card {
-    padding: 10px;
+    margin: 10px;
+}
 
+.card-bold {
+    font-family: 'Poppins', sans-serif;
+}
+
+.welcome {
+    text-align: right;
+    color: grey;
+    font-style: italic;
+    margin-right: 10px;
+}
+
+.hidden-search-field {
+    display: none;
+}
+
+.custom-search {
+    border: 1px;
+    border-color: black;
+    border-radius: 15px;
+}
+
+.icon-text {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2rem;
+}
+
+.icons {
+    font-size: 10rem;
+    margin-top: 0px;
+    padding-top: 0;
 }
