Fixed Jinja error on add_mushroom.html

--- a/templates/add_mushroom.html
+++ b/templates/add_mushroom.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">restaurant</i>
-                <input id="edible" name="edible" type="text" class="validate" value="{{ mushroom.edible }}" required>
+                <input id="edible" name="edible" type="text" class="validate" required>
                 <label for="edible">Edible?</label>
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">place</i>
-                <input id="found_at" name="found_at" type="text" value="{{ mushroom.found_at }}" class="validate" required>
+                <input id="found_at" name="found_at" type="text" class="validate" required>
                 <label for="found_at">Found at</label>
             </div>
         </div>
