Html validator fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <div class="nav-wrapper brown">
-                <span><img src="static/images/mushroom.png" width="40px" height="40px" class="logo-image"></span>
+                <span><img src="static/images/mushroom.png" width="40" height="40" class="logo-image" alt="Logo Icon"></span>
                 <a href="#!" class="brand-logo logo">Fungi Finders</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
