--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <h1>Welcome to Fungi Finders...</h1>
 </div>
 <div>
-    <img src="static/images/mushroom-hero.jpg" class="hero-img">
+    <img src="static/images/mushroom-hero.jpg" class="hero-img" alt="Mushroom Hero Image">
 </div>
 <div>
     <h4>About</h4>
